styles to avoid layout break

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ nav li {
   vertical-align: top;
 }
 #stats td {
-  font-size: 280%;
+  font-size: 220%;
   font-weight: 900;
   text-align: center;
   line-height: 1;
